refactor: split into :kumulant and :kumulant-bench subprojects